Mahout Change Log

Release 0.8 - unreleased

  MAHOUT-884: Matrix Concatenate Utility (Lance Norskog, smarthi)

  MAHOUT-1250: Deprecate unused algorithms (ssc)

  MAHOUT-1251: Optimize MinHashMapper (ssc)

  MAHOUT-1211: Disabled swallowing of IOExceptions is Closeables.close for writers (dfilimon)

  MAHOUT-1164: Make ARFF integration generate meta-data in JSON format (Marty Kube via ssc)

  MAHOUT-1164: Make ARFF integration generate meta-data in JSON format (Marty Kube via ssc)

  MAHOUT-1163: Make random forest classifier meta-data file human readable (Marty Kube via ssc)

  MAHOUT-1243: Dictionary file format in Lucene-Mahout integration is not in SequenceFileFormat (ssc)

  MAHOUT-974:  org.apache.mahout.cf.taste.hadoop.als.ParallelALSFactorizationJob use integer as userId and itemId (ssc)

  MAHOUT-1052: Add an option to MinHashDriver that specifies the dimension of vector to hash (indexes or values) (Elena Smirnova via smarthi)

  MAHOUT-1237: Total cluster cost isn't computed properly (dfilimon)

  MAHOUT-1196: LogisticModelParameters uses csv.getTargetCategories() even if csv is not used. (Vineet Krishnan via ssc)

  MAHOUT-1224: Add the option of running a StreamingKMeans pass in the Reducer before BallKMeans (dfilimon)

  MAHOUT-993:  Some vector dumper flags are expecting arguments. (Andrew Look via robinanil)

  MAHOUT-1228: Cleanup .gitignore (Stevo Slavic via ssc)

  MAHOUT-1047: CVB hangs after completion (Angel Martinez Gonzalez via smarthi)
  
  MAHOUT-1235: ParallelALSFactorizationJob does not use VectorSumCombiner (ssc)

  MAHOUT-1230: SparceMatrix.clone() is not deep copy (Maysam Yabandeh via tdunning)
  
  MAHOUT-1232: VectorHelper.topEntries() throws a NPE when number of NonZero elements in vector < maxEntries (smarthi)

  MAHOUT-1229: Conf directory content from Mahout distribution archives cannot be unpacked (Stevo Slavic via smarthi)
  
  MAHOUT-1213: SSVD job doesn't clean it's temp dir, and fails when seeing it again (smarthi)
